# preen

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go  main_test.go
cli/: Cargo.toml
cli/src/: main.rs
src/: lib.rs
src/cli/: Cargo.toml
