[package]
name = "preen"
description = "link checker"
version = "0.1.0"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/EthanJustice/preen"
repository = "https://github.com/EthanJustice/preen"
license = "MIT"
publish = false

[dependencies]
